# demo_test

./: .gitignore  README.md  plot.py
FrenetODE_test/: README.md  bsplineFun.py  frenet_ode.py  main.py  test.py
Optimal_Control_test/: .gitignore  QP.py  penalty_method.py  positive_definite.py
Optimal_Control_test/Convex_mpc/: .gitignore  CMakeLists.txt  conanfile.txt  convex_mpc.cpp  convex_mpc_spares.cpp  params.json  readme.md  tinympc_spares.cpp  traj.py  trajectory.csv  vis.py
Optimal_Control_test/Convex_mpc/common/: binary.h
Optimal_Control_test/Convex_mpc/data/: A.csv  C.csv  H.csv  b.csv  data.csv  debug.csv  g.csv  l.csv  params.json  u.csv
Optimal_Control_test/Euler/: Backward_Euler.py
Optimal_Control_test/LQR/: dp_lqr.py  lqr_solve.py  qp_method.py  shooting_method.py
Optimal_Control_test/Optimal_method/: positive_definite.py
Optimal_Control_test/Shooting_method/: CMakeLists.txt  log.h  shooting_method.cpp
Optimal_Control_test/get_control_seq/: get_control_seq.py
Optimal_Control_test/iLQR_DDP/: CMakeLists.txt  conanfile.txt  ilqr.h  main.cpp  martix_math.h  model.h  vis.py
Optimal_Control_test/iLQR_DDP/data/: A.csv  b.csv  data.csv  l.csv  params.json
Optimal_Control_test/inverse_test/: CMakeLists.txt  correction_matrix.cpp  inverse.cpp
Optimal_Control_test/linesearch/: CMakeLists.txt  cubicspline.c  cubicspline.h  linesearch.cpp  linesearch.hpp  main.cpp
Optimal_Control_test/newton_methon/: Backward_Euler_newton.py
Optimal_Control_test/sparse_matrix/: CMakeLists.txt  regularization.cpp  sparse_matrix.cpp
SparseMatrix_test/: .gitignore  CMakeLists.txt  shooting_method.cpp  solveDARE.cpp  sparse_matrix.cpp
c++_test/: .gitignore  CMakeLists.txt
c++_test/core_dump_test/: example.proto
c++_test/string_test/: CMakeLists.txt  string_tesr.cpp  timu.cpp
core_dump/: CMakeLists.txt  example.cpp  main.cpp
fallback/: .clang-format  CMakeLists.txt  main.cpp
inverse_test/: .gitignore  CMakeLists.txt
streamlit_test/: 3D_2D_line_search.py  README.md  main.py
